*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.5 ===
* Added possibility to change frequency values by double click.
* Implemented automatic scale of spectrum graph switch.


=== 1.0.4 ===
* Fixed Makeup button not affecting gain curve.
* Reduced CPU consumption for Linear Phase and Modern modes.
* Reduced the rate of the gain curve update.
* Updated build scripts and dependencies.

=== 1.0.3 ===
* Updated build scripts and dependencies.

=== 1.0.2 ===
* More fixes related to the surge protection mechanism.
* Updated build scripts and dependencies.

=== 1.0.1 ===
* Implemented Steereo Split mode for stereo versions of plugin.
* Surge protection is now gloal, not local for each band.
* Implemented Linear Phase operating mode.
* Updated build scripts and dependencies.

=== 1.0.0 ===
* Initial release.
