@@ -61,9 +61,9 @@
 						hrcolor="graph_marker_cycle">
 
 						<marker v="10" color.hue="0" hcolor.hue="0" rborder="16" hrborder="16" rcolor.hue="0" hrcolor.hue="0"/>
-						<marker id="sf1" editable="true" pointer="hsize" color.hue="0" hcolor.hue="0" lborder="16" hlborder="16" lcolor.hue="0" hlcolor.hue="0" rborder="16" hrborder="16" rcolor.hue="0.25" hrcolor.hue="0.25"/>
-						<marker id="sf2" editable="true" pointer="hsize" color.hue="0.25" hcolor.hue="0.25" lborder="16" hlborder="16" lcolor.hue="0.25" hlcolor.hue="0.25" rborder="16" hrborder="16" rcolor.hue="0.5" hrcolor.hue="0.5"/>
-						<marker id="sf3" editable="true" pointer="hsize" color.hue="0.5" hcolor.hue="0.5" lborder="16" hlborder="16" lcolor.hue="0.5" hlcolor.hue="0.5" rborder="16" hrborder="16" rcolor.hue="0.75" hrcolor.hue="0.75" visibility=":ebe"/>
+						<marker id="sf1" ui:id="split_marker1" editable="true" pointer="hsize" color.hue="0" hcolor.hue="0" lborder="16" hlborder="16" lcolor.hue="0" hlcolor.hue="0" rborder="16" hrborder="16" rcolor.hue="0.25" hrcolor.hue="0.25"/>
+						<marker id="sf2" ui:id="split_marker2" editable="true" pointer="hsize" color.hue="0.25" hcolor.hue="0.25" lborder="16" hlborder="16" lcolor.hue="0.25" hlcolor.hue="0.25" rborder="16" hrborder="16" rcolor.hue="0.5" hrcolor.hue="0.5"/>
+						<marker id="sf3" ui:id="split_marker3" editable="true" pointer="hsize" color.hue="0.5" hcolor.hue="0.5" lborder="16" hlborder="16" lcolor.hue="0.5" hlcolor.hue="0.5" rborder="16" hrborder="16" rcolor.hue="0.75" hrcolor.hue="0.75" visibility=":ebe"/>
 						<marker v="24000" color.hue="(:ebe) ? 0.75 : 0.5" hcolor.hue="(:ebe) ? 0.75 : 0.5" lborder="16" hlborder="16" lcolor.hue="(:ebe) ? 0.75 : 0.5" hlcolor.hue="(:ebe) ? 0.75 : 0.5"/>
 					</ui:with>
 
@@ -251,6 +251,12 @@
 							<text y="${g} db" text="${g}" visibility=":zoom le -15 db"/>
 						</ui:for>
 					</ui:with>
+
+					<ui:for id="i" first="1" count="3">
+						<ui:with ox="0" oy="2" y="1" valign="-1" color="graph_marker_cycle" visibility="false" pad.h="4" font.bold="true">
+							<text ui:id="split_note${i}" x=":sf${i}" halign="(:sf${i} lt 500) ? 1 : -1" text.halign="(:sf${i} lt 500) ? -1 : 1" color.hue="${(:i-1) * 0.25}"/>
+						</ui:with>
+					</ui:for>
 				</graph>
 			</group>
 			<!-- zoom -->
