@@ -25,6 +25,10 @@
 #include <private/plugins/gott_compressor.h>
 #include <private/ui/gott_compressor.h>
 
+#include <lsp-plug.in/dsp-units/units.h>
+#include <lsp-plug.in/stdlib/string.h>
+#include <lsp-plug.in/stdlib/locale.h>
+
 namespace lsp
 {
     namespace plugui
@@ -50,7 +54,13 @@ namespace lsp
 
         static ui::Factory factory(ui_factory, plugin_uis, 8);
 
+
         //---------------------------------------------------------------------
+        static const char *note_names[] =
+        {
+            "c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b"
+        };
+
         static const char *fmt_strings[] =
         {
             "%s_%d",
@@ -70,6 +80,7 @@ namespace lsp
             "%s_%ds",
             NULL
         };
+
 
         //---------------------------------------------------------------------
         // Plugin UI factory
@@ -91,6 +102,159 @@ namespace lsp
         {
         }
 
+        template <class T>
+        T *gott_compressor::find_split_widget(const char *fmt, const char *base, size_t id)
+        {
+            char widget_id[64];
+            ::snprintf(widget_id, sizeof(widget_id)/sizeof(char), fmt, base, int(id));
+            return pWrapper->controller()->widgets()->get<T>(widget_id);
+        }
+
+        status_t gott_compressor::slot_split_mouse_in(tk::Widget *sender, void *ptr, void *data)
+        {
+            // Fetch parameters
+            gott_compressor *ui = static_cast<gott_compressor *>(ptr);
+            if (ui == NULL)
+                return STATUS_BAD_STATE;
+
+            split_t *s = ui->find_split_by_widget(sender);
+            if (s != NULL)
+                ui->on_split_mouse_in(s);
+
+            return STATUS_OK;
+        }
+
+        status_t gott_compressor::slot_split_mouse_out(tk::Widget *sender, void *ptr, void *data)
+        {
+            // Fetch parameters
+            gott_compressor *ui = static_cast<gott_compressor *>(ptr);
+            if (ui == NULL)
+                return STATUS_BAD_STATE;
+
+            ui->on_split_mouse_out();
+
+            return STATUS_OK;
+        }
+
+        gott_compressor::split_t *gott_compressor::find_split_by_widget(tk::Widget *widget)
+        {
+            for (size_t i=0, n=vSplits.size(); i<n; ++i)
+            {
+                split_t *d = vSplits.uget(i);
+                if ((d->wMarker == widget) ||
+                    (d->wNote == widget))
+                    return d;
+            }
+            return NULL;
+        }
+
+        void gott_compressor::on_split_mouse_in(split_t *s)
+        {
+            if (s->wNote != NULL)
+            {
+                s->wNote->visibility()->set(true);
+                update_split_note_text(s);
+            }
+        }
+
+        void gott_compressor::on_split_mouse_out()
+        {
+            for (size_t i=0, n=vSplits.size(); i<n; ++i)
+            {
+                split_t *d = vSplits.uget(i);
+                if (d->wNote != NULL)
+                    d->wNote->visibility()->set(false);
+            }
+        }
+
+        void gott_compressor::add_splits()
+        {
+            static const char *fmt = "%s%d";
+
+            for (size_t port_id=1; port_id<meta::gott_compressor::BANDS_MAX; ++port_id)
+            {
+                split_t s;
+
+                s.pUI           = this;
+
+                s.wMarker       = find_split_widget<tk::GraphMarker>(fmt, "split_marker", port_id);
+                s.wNote         = find_split_widget<tk::GraphText>(fmt, "split_note", port_id);
+
+                s.pFreq         = find_port(fmt, "sf", port_id);
+
+                if (s.wMarker != NULL)
+                {
+                    s.wMarker->slots()->bind(tk::SLOT_MOUSE_IN, slot_split_mouse_in, this);
+                    s.wMarker->slots()->bind(tk::SLOT_MOUSE_OUT, slot_split_mouse_out, this);
+                }
+
+                if (s.pFreq != NULL)
+                    s.pFreq->bind(this);
+
+                vSplits.add(&s);
+            }
+        }
+
+        void gott_compressor::update_split_note_text(split_t *s)
+        {
+            // Get the frequency
+            float freq = (s->pFreq != NULL) ? s->pFreq->value() : -1.0f;
+            if (freq < 0.0f)
+            {
+                s->wNote->visibility()->set(false);
+                return;
+            }
+
+            // Update the note name displayed in the text
+            {
+                // Fill the parameters
+                expr::Parameters params;
+                tk::prop::String lc_string;
+                LSPString text;
+                lc_string.bind(s->wNote->style(), pDisplay->dictionary());
+                SET_LOCALE_SCOPED(LC_NUMERIC, "C");
+
+                // Frequency
+                text.fmt_ascii("%.2f", freq);
+                params.set_string("frequency", &text);
+
+                // Split number
+                params.set_int("id", vSplits.index_of(s) + 1);
+
+                // Process split note
+                float note_full = dspu::frequency_to_note(freq);
+                if (note_full != dspu::NOTE_OUT_OF_RANGE)
+                {
+                    note_full += 0.5f;
+                    ssize_t note_number = ssize_t(note_full);
+
+                    // Note name
+                    ssize_t note        = note_number % 12;
+                    text.fmt_ascii("lists.notes.names.%s", note_names[note]);
+                    lc_string.set(&text);
+                    lc_string.format(&text);
+                    params.set_string("note", &text);
+
+                    // Octave number
+                    ssize_t octave      = (note_number / 12) - 1;
+                    params.set_int("octave", octave);
+
+                    // Cents
+                    ssize_t note_cents  = (note_full - float(note_number)) * 100 - 50;
+                    if (note_cents < 0)
+                        text.fmt_ascii(" - %02d", -note_cents);
+                    else
+                        text.fmt_ascii(" + %02d", note_cents);
+                    params.set_string("cents", &text);
+
+                    s->wNote->text()->set("lists.gott_comp.notes.full", &params);
+                }
+                else
+                    s->wNote->text()->set("lists.gott_comp.notes.unknown", &params);
+            }
+
+        }
+
         status_t gott_compressor::post_init()
         {
             status_t res = ui::Module::post_init();
@@ -98,6 +262,8 @@ namespace lsp
                 return res;
 
             init_bands();
+            // Add splits widgets
+            add_splits();
 
             return STATUS_OK;
         }
@@ -134,6 +300,13 @@ namespace lsp
                 band_t *b = find_band_by_port(port);
                 if (b!= NULL)
                     process_band_port(b, port);
+            }
+
+            for (size_t i=0, n=vSplits.size(); i<n; ++i)
+            {
+                split_t *d = vSplits.uget(i);
+                if (d->pFreq == port)
+                    update_split_note_text(d);
             }
         }
 
@@ -217,5 +390,3 @@ namespace lsp
 
     } /* namespace plugui */
 } /* namespace lsp */
-
-
